--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
     <section id="about" class="section about">
       <div class="container about-container">
         <div class="about-content">
-          <h2 class="section-title">About Apex Signage</h2>
+          <h2 class="section-title">About Padma Corporation</h2>
           <p>
-            With over 10 years of experience in the signage industry, **Apex
-            Signage** is a leader in manufacturing high-quality branding
+            With over 10 years of experience in the signage industry, **Padma
+            Corporation** is a leader in manufacturing high-quality branding
             materials. We specialize in transforming business identities into
             physical reality through precision engineering and creative design.
           </p>
@@ -327,7 +327,7 @@
             </div>
             <div class="info-item">
               <h3>Email</h3>
-              <p>hello@apexsignage.com</p>
+              <p>hello@padmacorporation.com</p>
             </div>
             <div class="social-links">
               <a href="#" class="social-icon">FB</a>
@@ -392,7 +392,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; 2024 Apex Signage & Branding. All Rights Reserved.</p>
+        <p>&copy; 2026 Padma Corporation. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
